# coro

./: .env.schema  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  custom_client.py  custom_server.py  custom_server_chunked.py  deepgram-transcript.txt  murcia-transcript-deepgram.json  openai-transcript.txt  opencode.jsonc  prek.toml  pyproject.toml  ralph.sh  run_dev.py  run_transcription.py  test_batch_diarization.py  test_no_overlap.py  transcript_audio.sh  truth.json
.agent/: PROMPT.md  STEERING.md  ralph-bootstrap.sh
.agents/skills/ralph-prd-creation/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  pypi.yml  release.yml
.scratch/streaming-pipeline/: PRD.md
asr_diar_server/: __init__.py  app.py  audio.py  cli.py  runtime.py  settings.py
asr_diar_server/api/: __init__.py  dependencies.py  errors.py  exceptions.py  health.py  schemas.py  sse.py
asr_diar_server/api/v1/: __init__.py  transcriptions.py
asr_diar_server/api/v2/: __init__.py  transcriptions.py
asr_diar_server/backends/: __init__.py  faster_whisper.py  nemo.py  nemo_streaming.py  onnx_asr.py  onnx_genai.py  whisperlivekit.py
asr_diar_server/bench/: __init__.py  all_workload.py  ami.py  cli.py  clips.py  errors.py  gpu.py  orchestrate.py  performance.py  quality.py  report.py  run.py  sampling.py  schema.py  server_lifecycle.py  stm.py  transport.py  viz.py
asr_diar_server/bench/data/: __init__.py
asr_diar_server/bench/data/spanish/: RNE14-agosto-13.ref.stm
asr_diar_server/bench/utils/: ami_audios_download.py  ami_xlm_to_stm.py  diarized_lines_to_stm.py  make_ami_clip.py  make_common_voice_clips.py  make_rttm_clip.py  openai_diarized_json_to_stm.py  visualize_quality.py
asr_diar_server/core/: protocols.py  response.py  types.py
asr_diar_server/pipelines/: chunked_file.py  done_frame.py  finalizer.py  full_memory.py  streaming.py  v1.py  v2.py  windowing.py
coro/: __init__.py  app.py  audio.py  cli.py  runtime.py  settings.py
coro/api/: __init__.py  dependencies.py  errors.py  exceptions.py  health.py  schemas.py  sse.py
coro/api/v1/: __init__.py  transcriptions.py
coro/backends/: __init__.py  faster_whisper.py  nemo.py  nemo_streaming.py  onnx_asr.py  onnx_genai.py
coro/backends/asr/: __init__.py  factory.py  onnx_asr.py  onnx_genai.py
coro/backends/diarization/: __init__.py  factory.py  pyannote.py  segments.py
coro/backends/diarization/nemo/: __init__.py  diarization.py  streaming.py
coro/bench/: __init__.py  ami.py  cli.py  errors.py  eval_diarization_quality.py  gpu.py  orchestrate.py  performance.py  quality.py  report.py  run.py  sampling.py  server_lifecycle.py  stm.py  transport.py
coro/bench/models/: __init__.py  gpu.py  performance.py  quality.py  report.py  resource.py
coro/bench/utils/: ami_audios_download.py  ami_xlm_to_stm.py  make_ami_clip.py  make_common_voice_clips.py  make_rttm_clip.py  openai_diarized_json_to_stm.py  visualize_quality.py
coro/core/: __init__.py  protocols.py  response.py  types.py
coro/core/models/: __init__.py  events.py  response.py  transcript.py
coro/pipelines/: __init__.py  done_frame.py  finalizer.py  full_memory.py  streaming.py  transcript_store.py  windowing.py
docs/: benchmark.md
docs/adr/: 0001-package-and-api-surface.md  0002-meeteval-for-quality-scoring.md  0002-replace-chunked-file-with-streaming-pipeline.md  0003-server-warmup-gates-health-readiness.md  0005-streaming-sortformer-internal-api.md  0006-data-model-module-tree.md  0007-capability-first-backend-layout.md
docs/superpowers/plans/: 2026-04-30-bench-asr-python-rewrite.md
docs/superpowers/specs/: 2026-04-30-bench-asr-python-rewrite-design.md
scripts/lib/: agents.sh  args.sh  display.sh
tests/: test_app_factory.py  test_asr_factory.py  test_asr_windowing.py  test_audio.py  test_backends.py  test_bench.py  test_bench_ami.py  test_bench_clips.py  test_bench_common_voice.py  test_bench_e2e.py  test_bench_gpu.py  test_bench_lifecycle.py  test_bench_performance.py  test_bench_quality.py  test_bench_report.py  test_bench_rttm_clip.py  test_bench_transport.py  test_bench_viz.py  test_boundary_schemas.py  test_chunked_file_pipeline.py  test_core_response.py  test_dependencies_runtime.py  test_diarization_factory.py  test_done_frame.py  test_exception_handlers.py  test_finalizer.py  test_full_memory_pipeline.py  test_health.py  test_latency_factory.py  test_onnx_asr_backend.py  test_onnx_genai_backend.py  test_openai_sdk_conformance.py  test_pipelines.py  test_pyannote_backend.py  test_response_format.py  test_settings.py  test_sse_streaming.py  test_stm.py  test_streaming_diarizer.py  test_streaming_memory.py  (+10 more)
tools/: bench_asr.py  bench_asr.sh  whisperx_to_rttm.py
tools/transcription_compare/: README.md  package.json  server.mjs
tools/transcription_compare/src/: app.js  compare.js  index.html  styles.css
tools/transcription_compare/test/: compare.test.js
tools/transcription_compare/test/fixtures/: custom-server-final.json  deepgram.json  openai-truth.json
