[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Distribution name `coro` is taken on PyPI; publish as `coro-asr` while the
# import package stays `coro`. Version is derived from git tags (vX.Y.Z) via hatch-vcs.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "coro/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["coro"]

[project]
name = "coro-asr"
dynamic = ["version"]
description = "Coro: OpenAI-compatible ASR + speaker-diarization server with pluggable backends."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12, <3.13"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.2.0,<1.3.0",
    "lightning==2.4.0",
    "nemo-toolkit[asr]>=2.7.0,<2.8.0",
    "onnx-asr[hub]>=0.11.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.27",
    "uvicorn>=0.30.0",
]


# onnxruntime and onnxruntime-genai each ship as two mutually-exclusive wheels (CPU vs GPU),
# so they are split across the existing cpu/cuda conflicting extras alongside torch.
# onnxruntime 1.24.1 is excluded for a known onnx-asr incompatibility.
# onnxruntime-genai powers the optional onnx-genai (nemotron streaming) backend.
# faster-whisper unconditionally requires `onnxruntime` (its Silero VAD); under the
# cuda extra that CPU wheel installs alongside onnxruntime-gpu and shadows the GPU
# build at import time. tool.uv.dependency-metadata (below) strips that dependency so
# the runtime is supplied solely by the selected extra (onnxruntime / onnxruntime-gpu).
[project.optional-dependencies]
cpu = [
    "torch>=2.1.0,<4.0",
    "onnxruntime>=1.22,!=1.24.1",
    "onnxruntime-genai>=0.14.0",
]
cuda = [
    "nvidia-cublas-cu12>=12.0.0.0",
    "nvidia-cudnn-cu12>=9.0.0.0",
    "torch>=2.1.0,<4.0",
    "onnxruntime-gpu>=1.22,!=1.24.1",
    "onnxruntime-genai-cuda>=0.14.0",
]

# Internal-only groups (PEP 735). Not exposed via pip; uv-native.
[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "openai>=2.0.0",
    "ruff>=0.15,<0.16",
    "pyrefly>=0.17.0",
]
bench = ["meeteval>=0.4.3", "nvidia-ml-py>=12.0.0", "rich>=15.0.0", "simplejson>=3.0.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]
default-groups = ["dev"]

# Drop faster-whisper's unconditional `onnxruntime` dep so it does not pull the CPU
# wheel into the cuda resolution (where it would shadow onnxruntime-gpu). The runtime
# is provided by the cpu extra (onnxruntime) or cuda extra (onnxruntime-gpu). Mirrors
# faster-whisper 1.2.x base requires-dist minus onnxruntime; re-check on upgrade.
[[tool.uv.dependency-metadata]]
name = "faster-whisper"
requires-dist = [
    "ctranslate2<5,>=4.0",
    "huggingface-hub>=0.21",
    "tokenizers<1,>=0.13",
    "av>=11",
    "tqdm",
]

[tool.uv.sources]
torch = [{ index = "torch-cpu", extra = "cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
coro = "coro.cli:main"
coro-bench = "coro.bench.cli:main"

# MARK: Ruff
[tool.ruff]
line-length = 100
exclude = [
    # Generated by hatch-vcs at build time.
    "coro/_version.py",
    # Prototype scripts — excluded from active verification per PRD.
    "custom_server.py",
    "custom_server_chunked.py",
    "run_transcription.py",
    "run_dev.py",
    "custom_client.py",
    "tools/",
    ".worktrees/",
    ".scratch/",
    # Legacy top-level tests that import from prototype scripts.
    "test_batch_diarization.py",
    "test_no_overlap.py",
]

[tool.ruff.lint]
select = [
    "E",      # rules that indicate likely bugs or errors in code
    "F",      # rules that indicate likely bugs or errors in code
    "B",      # flake8-bugbear rules for likely bugs and design problems
    "SIM",    # rules for code simplification
    "RET",    # rules for improving code readability
    "C4",     # rules for enforcing consistent code style
    "DTZ",    # rules for datetime handling
    "PTH",    # rules for path handling
    "LOG",    # rules for logging
    "S",      # rules for security
    "C90",    # rules for C90 compatibility
    "G",      # flake8-logging rules for logging best practices
    "UP",     # pyupgrade rules for Python version compatibility
    "RUF",    # Ruff specific rules
    "ERA001", # Erradicate - commented-out-code
    "FAST",   # FastAPI specific rules
    "D200",   # one-line docstring should fit on one line
    "D205",   # blank line required between summary and description
    "D212",   # multi-line summary should start at first line
    "D300",   # use triple double quotes
    "D301",   # use r""" if backslashes in docstring
    "D400",   # first line should end with a period
    "D401",   # first line should be in imperative mood
    "D403",   # first word of docstring should be capitalized
    "D405",   # section name should be capitalized
    "D406",   # section name should end with newline
    "D407",   # missing dashed underline after section
    "D408",   # section underline should follow section name
    "D409",   # section underline should match section name length
    "D410",   # blank line after section
    "D411",   # blank line before section
    "D412",   # no blank lines between section header and content
    "D413",   # blank line after last section
    "D414",   # section has no content
    "D415",   # first line should end with punctuation
    "D417",   # missing argument descriptions
    "D418",   # no docstring on @overload
    "D419",   # empty docstring
]
task-tags = ["TODO", "FIXME", "XXX", "MARK"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests assert/lack docstrings and use fixed /tmp paths for deterministic fixtures.
"tests/**" = ["S101", "D", "S108"]
# FastAPI routes use the idiomatic `= File(...)` / `= Form(...)` default style.
"coro/api/v1/transcriptions.py" = ["FAST002", "B008"]
"coro/audio.py" = ["C901"]
# Best-effort NVML telemetry: failures are intentionally swallowed per-device.
"coro/bench/gpu.py" = ["S112", "S110", "SIM105"]
# Parses the AMI benchmark corpus XML/STM (trusted local fixtures).
"coro/bench/stm.py" = ["S314"]
# Markdown report tables: header/separator strings exceed the line limit by design.
"coro/bench/report.py" = ["E501"]
# Downloads the AMI corpus over http(s) from a fixed mirror.
"coro/bench/utils/ami_audios_download.py" = ["S310"]
# Bench/CLI tools use subprocess calls with partial paths (system tools).
# PTH123/PTH108 — /proc reads use builtins; SIM105 — benchmark exception swallowing is intentional.
# C901 — _run_rep is naturally complex due to benchmark sampling orchestration.
"coro/bench/run.py" = [
    "S603",
    "S607",
    "S110",
    "S108",
    "PTH123",
    "SIM105",
    "C901",
]
"coro/bench/cli.py" = ["S108", "DTZ005"]
"coro/bench/server_lifecycle.py" = ["S603", "S607", "S310", "S110"]
# Clip utilities shell out to the system ffmpeg binary by name.
"coro/bench/utils/make_ami_clip.py" = ["S603", "S607"]
"coro/bench/utils/make_common_voice_clips.py" = ["S603", "S607"]
"coro/bench/transport.py" = ["S310"]
"coro/bench/orchestrate.py" = [
    "S310",
    "S603",
    "S607",
    "S110",
    "SIM105",
    "UP017",
]
# Settings and CLI use 0.0.0.0 intentionally.
"coro/settings.py" = ["S104"]
"coro/cli.py" = ["S104"]


# MARK: Pyrefly
[tool.pyrefly]
# Scope checking to first-party sources. Without this, a bare `pyrefly check`
# (e.g. from the prek hook or CI) walks the whole tree incl. site-packages.
project-includes = ["coro", "tests"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv/**/*",
    "**/.venv/**/*",
    "**/.uv_cache/**/*",
    # Generated by hatch-vcs at build time.
    "coro/_version.py",
    # Prototype scripts — excluded from active verification per PRD.
    "custom_server.py",
    "custom_server_chunked.py",
    "run_transcription.py",
    "custom_client.py",
    "tools/**",
    ".worktrees/**",
    ".scratch/**",
    "test_batch_diarization.py",
    "test_no_overlap.py",
]
use-ignore-files = false
disable-project-excludes-heuristics = true
python-interpreter-path = ".venv/bin/python"
# onnxruntime_genai is a compiled extension shipping no type stubs; treat its
# attributes as Any rather than reporting every og.* access as missing.
replace-imports-with-any = ["onnxruntime_genai"]


# MARK: Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
